--- a/evaluation/evaluator.yaml
+++ b/evaluation/evaluator.yaml
@@ -11,3 +11,11 @@ data :
   img_encoding:
     patch_w: 32 # number of patchs in width
     patch_h: 18
+  inference_step: 100
+
+  model:
+    name: DinoV2
+
+  parameters: 
+    k_means: [1,3,5,7,9,11]
+    threshold: [0,0.1,0.2,0.3,0.4,0.5,0.6,0.7,0.8,0.9]
