adjusted the preprocessing and co to work on the 229 scenes we are working with

--- a/preprocessing/scan3r/preprocess_scan3r.yaml
+++ b/preprocessing/scan3r/preprocess_scan3r.yaml
@@ -13,6 +13,7 @@ data :
   label_file_name : labels.instances.align.annotated.v2.ply
   pred_subfix     : inseg.ply
   resplit: True
+  rescan: True
 
 preprocess :
   pc_resolutions      : [64, 128, 256, 512]
