--- a/matching/matching_param.yaml
+++ b/matching/matching_param.yaml
@@ -17,6 +17,6 @@ model:
   name: DinoV2
 
 parameters: 
-    k_means: [1]
-    threshold: [0]
-    mode: ""
+    k_means: 2
+    threshold: 0.3
+    mode: "avg"
