--- a/sceneGraph_update/centers_generator_train.yaml
+++ b/sceneGraph_update/centers_generator_train.yaml
@@ -17,7 +17,9 @@ model:
   name: DinoV2
 
 parameters: 
-    voxel_size: 0.125
-    minimum_points: 49
-    minimum_votes: 3
-  
+    voxel_size_downsampling : 0.05
+    voxel_size_overlap: 0.15 #for faster computation
+    minimum_points: [10,20,30,40,50]
+    minimum_votes: [3,4,5,6,7,8]
+    overlatp_th: 0.3
+           
