--- a/sceneGraph_update/centers_generator_train.yaml
+++ b/sceneGraph_update/centers_generator_train.yaml
@@ -22,4 +22,5 @@ parameters:
     minimum_points: [10,20,30,40,50]
     minimum_votes: [3,4,5,6,7,8]
     overlap_th: 0.5
+    box_scale: 0.5
            
