also added the evaluation for testset in the segmentation pipeline and also the statistics for the testset for the object centers

--- a/sceneGraph_update/object_predictor.yaml
+++ b/sceneGraph_update/object_predictor.yaml
@@ -17,7 +17,8 @@ model:
   name: DinoV2
 
 parameters: 
-    voxel_size: 0.125
-    minimum_points: 49
+    voxel_size: 0.2
+    minimum_points: 30
     minimum_votes: 3
+    overlap_threshold: 0.5
   
