--- a/sceneGraph_update/centers_prediction_train.yaml
+++ b/sceneGraph_update/centers_prediction_train.yaml
@@ -21,6 +21,6 @@ parameters:
     voxel_size_overlap: 0.2 #for faster computation
     minimum_points: [10,20,30,40,50,60,70,80,90,100]
     minimum_votes: [3,4,5,6,7,8,9,10,11,12,13]
-    overlap_th: 0.5
+    overlap_th: [0.3,0.5,0.7]
     box_scale: 0.5
            
