--- a/matching/evaluator.yaml
+++ b/matching/evaluator.yaml
@@ -18,4 +18,4 @@ model:
 
 parameters: 
   k_means: [1,3,5,7,9,11,13]
-  threshold: [0.8,0.9] #[-0.5,-0.4,-0.3, -0.2, -0.1, 0.0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7]
+  threshold: [-0.9,-0.8,-0.7,-0.6,-0.5,-0.4,-0.3, -0.2, -0.1, 0.0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7,0.8,0.9]
