--- a/sceneGraph_update/centers_prediction_train.yaml
+++ b/sceneGraph_update/centers_prediction_train.yaml
@@ -18,7 +18,8 @@ model:
 
 parameters:
     voxel_size_overlap: 0.2 #for faster computation
-    minimum_votes: [2,3,4,5,6,7,8,9,10,11,12,13]
+    minimum_votes: [1,2,3,4,5,6,7,8,9]
+    minimum_points: [5,10,15,20,25,30,35,40,45,50]
     overlap_th: [0.1,0.3,0.5,0.7,0.9]
     box_scale: 1
            
