--- a/environment_BT.yml
+++ b/environment_BT.yml
@@ -251,7 +251,7 @@ dependencies:
       - nibabel==5.0.0
       - notebook==6.5.2
       - notebook-shim==0.2.2
-      - numpy==1.23.5
+      - numpy
       - numpy-quaternion==2022.4.3
       - nvidia-cublas-cu11==11.10.3.66
       - nvidia-cublas-cu12==12.1.3.1
