--- a/matching/evaluator.yaml
+++ b/matching/evaluator.yaml
@@ -17,5 +17,5 @@ model:
   name: DinoV2
 
 parameters: 
-  k_means:  [5] #[1,3,5,7,9,11,13]
-  threshold: [0.0] #[-0.9,-0.8,-0.7,-0.6,-0.5,-0.4,-0.3, -0.2, -0.1, 0.0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7,0.8,0.9]
+  k_means: [1,3,5,7,9]  # final parameters test new obj[5] # parameters for the  new objects includede[1,3,5,7,9,11,13]
+  threshold: [0.0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7,0.8,0.9] # final parameter test new obj [0.0] # parameters for the  new objects includede[-0.9,-0.8,-0.7,-0.6,-0.5,-0.4,-0.3, -0.2, -0.1, 0.0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7,0.8,0.9]
