--- a/sceneGraph_update/centers_prediction_train.yaml
+++ b/sceneGraph_update/centers_prediction_train.yaml
@@ -18,8 +18,8 @@ model:
 
 parameters:
     voxel_size_overlap: 0.2 #for faster computation
-    minimum_votes: [1,2,3,4,5,6] #[1,2,3,4,5,6,7,8,9]
-    minimum_points: [5,10,15,20,25,30,35,40,45,50,55,60]  #[5,10,15,20,25,30,35,40,45,50,60,70,80,90]
-    overlap_th: [0.1,0.3,0.5,0.7]
+    minimum_votes: [3] #[1,2,3,4,5,6] #[1,2,3,4,5,6,7,8,9] for new obj
+    minimum_points: [45] #[5,10,15,20,25,30,35,40,45,50,55,60]  #[5,10,15,20,25,30,35,40,45,50,60,70,80,90] for new obj
+    overlap_th: [0.1] #[0.1,0.3,0.5,0.7]
     box_scale: 1
            
