--- a/environment.yml
+++ b/environment.yml
@@ -1,32 +1,370 @@
-name: tryfinal
+name: OD3DU
 channels:
-  - conda-forge
   - pytorch
-  - default
+  - nvidia
+  - conda-forge
+  - defaults
 dependencies:
-  - python=3.8
-  - pip
-  - einops==0.6.0
-  - faiss==1.7.2
-  - fvcore==0.1.5.post20221221
-  - h5py==3.11.0
-  - matplotlib==3.6.2
-  - numpy
-  - plyfile==0.7.4
-  - scipy==1.9.3
-  - setuptools==60.2.0
-  - sympy==1.12
-  - tqdm==4.65.0
-  - transformers==4.26.1
+  - _libgcc_mutex=0.1
+  - _openmp_mutex=4.5
+  - aiohappyeyeballs=2.4.3
+  - aiohttp=3.10.5
+  - aiosignal=1.3.1
+  - alsa-lib=1.2.12
+  - aom=3.9.1
+  - async-timeout=4.0.3
+  - attr=2.5.1
+  - attrs=24.2.0
+  - aws-c-auth=0.7.31
+  - aws-c-cal=0.7.4
+  - aws-c-common=0.9.31
+  - aws-c-compression=0.2.19
+  - aws-c-event-stream=0.4.3
+  - aws-c-http=0.8.10
+  - aws-c-io=0.14.20
+  - aws-c-mqtt=0.10.7
+  - aws-c-s3=0.7.0
+  - aws-c-sdkutils=0.1.19
+  - aws-checksums=0.1.20
+  - aws-crt-cpp=0.28.5
+  - aws-sdk-cpp=1.11.407
+  - azure-core-cpp=1.14.0
+  - azure-identity-cpp=1.10.0
+  - azure-storage-blobs-cpp=12.13.0
+  - azure-storage-common-cpp=12.8.0
+  - azure-storage-files-datalake-cpp=12.12.0
+  - blas=1.0
+  - brotli=1.1.0
+  - brotli-bin=1.1.0
+  - brotli-python=1.1.0
+  - bzip2=1.0.8
+  - c-ares=1.34.2
+  - ca-certificates=2024.8.30
+  - cairo=1.18.0
+  - certifi=2024.8.30
+  - cffi=1.17.0
+  - charset-normalizer=3.4.0
+  - click=8.1.7
+  - colorama=0.4.6
+  - contourpy=1.1.1
+  - cpython=3.8.20
+  - cuda-cudart=11.8.89
+  - cuda-cupti=11.8.87
+  - cuda-libraries=11.8.0
+  - cuda-nvrtc=11.8.89
+  - cuda-nvtx=11.8.86
+  - cuda-runtime=11.8.0
+  - cudatoolkit=11.8.0
+  - cycler=0.12.1
+  - dataclasses=0.8
+  - datasets=2.19.2
+  - dav1d=1.2.1
+  - dbus=1.13.6
+  - dill=0.3.8
+  - einops=0.6.0
+  - expat=2.6.3
+  - faiss=1.7.2
+  - ffmpeg=7.1.0
+  - filelock=3.16.1
+  - font-ttf-dejavu-sans-mono=2.37
+  - font-ttf-inconsolata=3.000
+  - font-ttf-source-code-pro=2.038
+  - font-ttf-ubuntu=0.83
+  - fontconfig=2.14.2
+  - fonts-conda-ecosystem=1
+  - fonts-conda-forge=1
+  - fonttools=4.53.1
+  - freetype=2.12.1
+  - fribidi=1.0.10
+  - frozenlist=1.4.1
+  - fsspec=2024.3.1
+  - fvcore=0.1.5.post20221221
+  - gettext=0.22.5
+  - gettext-tools=0.22.5
+  - gflags=2.2.2
+  - glib=2.82.2
+  - glib-tools=2.82.2
+  - glog=0.7.1
+  - gmp=6.3.0
+  - gmpy2=2.1.5
+  - graphite2=1.3.13
+  - gst-plugins-base=1.24.7
+  - gstreamer=1.24.7
+  - h2=4.1.0
+  - harfbuzz=9.0.0
+  - hpack=4.0.0
+  - huggingface_hub=0.26.1
+  - hyperframe=6.0.1
+  - icu=75.1
+  - idna=3.10
+  - importlib-metadata=8.5.0
+  - importlib_metadata=8.5.0
+  - intel-openmp=2022.0.1
+  - jinja2=3.1.4
+  - joblib=1.4.2
+  - keyutils=1.6.1
+  - kiwisolver=1.4.5
+  - krb5=1.21.3
+  - lame=3.100
+  - lcms2=2.16
+  - ld_impl_linux-64=2.43
+  - lerc=4.0.0
+  - libabseil=20240722.0
+  - libarrow=17.0.0
+  - libarrow-acero=17.0.0
+  - libarrow-dataset=17.0.0
+  - libarrow-substrait=17.0.0
+  - libasprintf=0.22.5
+  - libasprintf-devel=0.22.5
+  - libass=0.17.3
+  - libblas=3.9.0
+  - libbrotlicommon=1.1.0
+  - libbrotlidec=1.1.0
+  - libbrotlienc=1.1.0
+  - libcap=2.69
+  - libcblas=3.9.0
+  - libclang-cpp15=15.0.7
+  - libclang13=19.1.2
+  - libcrc32c=1.1.2
+  - libcublas=11.11.3.6
+  - libcufft=10.9.0.58
+  - libcufile=1.9.1.3
+  - libcups=2.3.3
+  - libcurand=10.3.5.147
+  - libcurl=8.10.1
+  - libcusolver=11.4.1.48
+  - libcusparse=11.7.5.86
+  - libdeflate=1.22
+  - libdrm=2.4.123
+  - libedit=3.1.20191231
+  - libegl=1.7.0
+  - libev=4.33
+  - libevent=2.1.12
+  - libexpat=2.6.3
+  - libfaiss=1.7.2
+  - libfaiss-avx2=1.7.2
+  - libffi=3.4.2
+  - libflac=1.4.3
+  - libgcc=14.2.0
+  - libgcc-ng=14.2.0
+  - libgcrypt=1.11.0
+  - libgettextpo=0.22.5
+  - libgettextpo-devel=0.22.5
+  - libgfortran=14.2.0
+  - libgfortran-ng=14.2.0
+  - libgfortran5=14.2.0
+  - libgl=1.7.0
+  - libglib=2.82.2
+  - libglvnd=1.7.0
+  - libglx=1.7.0
+  - libgomp=14.2.0
+  - libgoogle-cloud=2.30.0
+  - libgoogle-cloud-storage=2.30.0
+  - libgpg-error=1.50
+  - libgrpc=1.65.5
+  - libhwloc=2.11.1
+  - libiconv=1.17
+  - libjpeg-turbo=3.0.0
+  - liblapack=3.9.0
+  - libllvm15=15.0.7
+  - libllvm19=19.1.2
+  - libnghttp2=1.64.0
+  - libnpp=11.8.0.86
+  - libnsl=2.0.1
+  - libnvjpeg=11.9.0.86
+  - libogg=1.3.5
+  - libopenvino=2024.4.0
+  - libopenvino-auto-batch-plugin=2024.4.0
+  - libopenvino-auto-plugin=2024.4.0
+  - libopenvino-hetero-plugin=2024.4.0
+  - libopenvino-intel-cpu-plugin=2024.4.0
+  - libopenvino-intel-gpu-plugin=2024.4.0
+  - libopenvino-intel-npu-plugin=2024.4.0
+  - libopenvino-ir-frontend=2024.4.0
+  - libopenvino-onnx-frontend=2024.4.0
+  - libopenvino-paddle-frontend=2024.4.0
+  - libopenvino-pytorch-frontend=2024.4.0
+  - libopenvino-tensorflow-frontend=2024.4.0
+  - libopenvino-tensorflow-lite-frontend=2024.4.0
+  - libopus=1.3.1
+  - libparquet=17.0.0
+  - libpciaccess=0.18
+  - libpng=1.6.44
+  - libpq=16.4
+  - libprotobuf=5.27.5
+  - libre2-11=2024.07.02
+  - libsndfile=1.2.2
+  - libsqlite=3.47.0
+  - libssh2=1.11.0
+  - libstdcxx=14.2.0
+  - libstdcxx-ng=14.2.0
+  - libsystemd0=256.7
+  - libthrift=0.21.0
+  - libtiff=4.7.0
+  - libutf8proc=2.8.0
+  - libuuid=2.38.1
+  - libva=2.22.0
+  - libvorbis=1.3.7
+  - libvpx=1.14.1
+  - libwebp-base=1.4.0
+  - libxcb=1.17.0
+  - libxcrypt=4.4.36
+  - libxkbcommon=1.7.0
+  - libxml2=2.12.7
+  - libzlib=1.3.1
+  - llvm-openmp=15.0.7
+  - lz4-c=1.9.4
+  - markupsafe=2.1.5
+  - matplotlib=3.6.2
+  - matplotlib-base=3.6.2
+  - mkl=2022.1.0
+  - mpc=1.3.1
+  - mpfr=4.2.1
+  - mpg123=1.32.6
+  - mpmath=1.3.0
+  - multidict=6.0.5
+  - multiprocess=0.70.16
+  - munkres=1.1.4
+  - mysql-common=9.0.1
+  - mysql-libs=9.0.1
+  - ncurses=6.5
+  - networkx=3.1
+  - nspr=4.36
+  - nss=3.105
+  - numpy=1.24.4
+  - ocl-icd=2.3.2
+  - openh264=2.4.1
+  - openjpeg=2.5.2
+  - openssl=3.3.2
+  - orc=2.0.2
+  - packaging=24.1
+  - pandas=2.0.3
+  - pcre2=10.44
+  - pillow=10.4.0
+  - pip=24.2
+  - pixman=0.43.2
+  - ply=3.11
+  - plyfile=0.7.4
+  - portalocker=2.10.1
+  - pthread-stubs=0.4
+  - pugixml=1.14
+  - pulseaudio-client=17.0
+  - pyarrow=17.0.0
+  - pyarrow-core=17.0.0
+  - pyarrow-hotfix=0.6
+  - pycparser=2.22
+  - pyparsing=3.1.4
+  - pyqt=5.15.9
+  - pyqt5-sip=12.12.2
+  - pysocks=1.7.1
+  - python=3.8.20
+  - python-dateutil=2.9.0
+  - python-tzdata=2024.2
+  - python-xxhash=3.5.0
+  - python_abi=3.8
+  - pytorch=2.3.0
+  - pytorch-cuda=11.8
+  - pytorch-mutex=1.0
+  - pytz=2024.2
+  - pyyaml=6.0.2
+  - qt-main=5.15.8
+  - re2=2024.07.02
+  - readline=8.2
+  - regex=2024.7.24
+  - requests=2.32.3
+  - s2n=1.5.5
+  - sacremoses=0.0.53
+  - scipy=1.9.3
+  - setuptools=60.2.0
+  - sip=6.7.12
+  - six=1.16.0
+  - snappy=1.2.1
+  - svt-av1=2.2.1
+  - sympy=1.12
+  - tabulate=0.9.0
+  - tbb=2021.13.0
+  - termcolor=2.4.0
+  - tk=8.6.13
+  - tokenizers=0.13.3
+  - toml=0.10.2
+  - tomli=2.0.2
+  - torchaudio=2.3.0
+  - torchtriton=2.3.0
+  - torchvision=0.18.0
+  - tornado=6.4.1
+  - tqdm=4.65.0
+  - transformers=4.26.1
+  - typing-extensions=4.12.2
+  - typing_extensions=4.12.2
+  - tzdata=2024b
+  - unicodedata2=15.1.0
+  - urllib3=2.2.3
+  - wayland=1.23.1
+  - wayland-protocols=1.37
+  - wheel=0.44.0
+  - x264=1!164.3095
+  - x265=3.5
+  - xcb-util=0.4.1
+  - xcb-util-image=0.4.0
+  - xcb-util-keysyms=0.4.1
+  - xcb-util-renderutil=0.3.10
+  - xcb-util-wm=0.4.2
+  - xkeyboard-config=2.43
+  - xorg-libice=1.1.1
+  - xorg-libsm=1.2.4
+  - xorg-libx11=1.8.10
+  - xorg-libxau=1.0.11
+  - xorg-libxdmcp=1.1.5
+  - xorg-libxext=1.3.6
+  - xorg-libxfixes=6.0.1
+  - xorg-libxrender=0.9.11
+  - xorg-libxxf86vm=1.1.5
+  - xorg-xf86vidmodeproto=2.3.1
+  - xorg-xorgproto=2024.1
+  - xxhash=0.8.2
+  - xz=5.2.6
+  - yacs=0.1.8
+  - yaml=0.2.5
+  - yarl=1.9.4
+  - zipp=3.20.2
+  - zlib=1.3.1
+  - zstandard=0.23.0
+  - zstd=1.5.6
   - pip:
-      - faiss==1.7.2
-      - fast_pytorch_kmeans==0.2.0.1
-      - scikit_learn==1.1.3
-      - torchvision==0.18.0
-      - trimesh==3.17.0
+      - addict==2.4.0
+      - blinker==1.8.2
+      - comm==0.2.2
+      - configargparse==1.7
+      - dash==2.18.1
+      - dash-core-components==2.0.0
+      - dash-html-components==2.0.0
+      - dash-table==5.0.0
+      - decorator==5.1.1
+      - fast-pytorch-kmeans==0.2.0.1
+      - flask==3.0.3
+      - h5py==3.11.0
+      - ipywidgets==8.1.5
+      - itsdangerous==2.2.0
+      - jupyterlab-widgets==3.0.13
       - mmcv-full==1.4.8
       - mmdet==2.19.0
-      - open3d==0.16.0 
-      - torch==2.3.0
-      - torchvision==0.18.0
-      - scikit_learn==1.1.3
+      - nbformat==5.5.0
+      - nest-asyncio==1.6.0
+      - open3d==0.16.0
+      - opencv-python==4.10.0.84
+      - pexpect==4.9.0
+      - plotly==5.24.1
+      - ptyprocess==0.7.0
+      - pycocotools==2.0.7
+      - pynvml==11.5.3
+      - pyquaternion==0.9.9
+      - retrying==1.3.4
+      - scikit-learn==1.1.3
+      - tenacity==9.0.0
+      - terminaltables==3.1.10
+      - threadpoolctl==3.5.0
+      - trimesh==3.17.0
+      - werkzeug==3.0.4
+      - widgetsnbextension==4.0.13
+      - yapf==0.40.2
+
