--- a/matching/evaluator_test.yaml
+++ b/matching/evaluator_test.yaml
@@ -16,10 +16,6 @@ data :
 model:
   name: DinoV2
 
-parameters:
-    voxel_size_overlap: 0.2 #for faster computation
-    minimum_votes: [1,2,3,4,5,6]
-    minimum_points: [5,10,15,20,25,30,35,40,45,50,55,60] 
-    overlap_th: [0.1,0.3,0.5]
-    box_scale: 1
-           
+parameters: 
+  k_means: [5] 
+  threshold: [0.6]
