made the parameter files cleaner

--- a/matching/matching_param.yaml
+++ b/matching/matching_param.yaml
@@ -19,4 +19,4 @@ model:
 parameters: 
     k_means: 5
     threshold: 0.6
-    mode: "avg"
+    mode: "avg" #how the raw features get processed to reduce dimensionality for the test - will just be saved in Predicted matches - caution not to overwrite if mode changes
