--- a/preprocessing/dino_semantic/dinov2_segmentor.yaml
+++ b/preprocessing/dino_semantic/dinov2_segmentor.yaml
@@ -14,7 +14,7 @@ data :
     resize_h:  224 #126 in the features 3d it is also 224 but changed by elena
     img_rotate: True # rotate w,h for backbone GCVit
     patch_w: 32 # number of patchs in width
-    patch_h: 18
+    patch_h: 18 #number of patches in height
   inference_step: 100
 
 model:
@@ -40,26 +40,10 @@ sgaligner:
   registration  : False
   scan_type     : 'scan'
 
-  preprocess :
-    pc_resolutions      : [64, 128, 256, 512]
-    subscenes_per_scene : 1
-    filter_segment_size : 512
-    min_obj_points      : 50
-    anchor_type_name    : '' 
-
   model :
     rel_dim             : 41
     attr_dim            : 164
     alignment_thresh    : 0.4
 
-  train :
-    pc_res: 512
 
-  val :
-    pc_res: 512
-    overlap_low         : 0.0
-    overlap_high        : 0.0
-    data_mode: orig
 
-mode: "val"
-split: "test"
