--- a/preprocessing/gt_anno_2D/gt_anno.yaml
+++ b/preprocessing/gt_anno_2D/gt_anno.yaml
@@ -10,5 +10,5 @@ data :
     h: 540
   img_encoding:
     patch_w: 32 # number of patchs in width
-    patch_h: 18
+    patch_h: 18 #number of patches in height
     
